--- a/src/js/views/Home/Home.module.css
+++ b/src/js/views/Home/Home.module.css
@@ -1,1 +1,55 @@
-
+.button {
+    border: none;
+    padding: 15px 2px;
+    margin: 2px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    width: 100%;
+}
+.btnBlue {
+    background-color: blue;
+    color: white;
+}
+.btnGreen {
+    background-color: greenyellow;
+    color: black;
+}
+.btnRed {
+    background-color: red;
+    color: white;
+}
+.btnTransparent {
+    background-color: transparent;
+    color: white;
+}
+.square {
+    border: 2px solid white;
+    padding: 15px 2px;
+    margin: 2px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    font-size: 16px;
+    width: 100%;
+}
+.btnMinute {
+    font-size: x-small;
+}
+.bulle:before {
+    content: attr(data-count);
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    text-align: center;
+    display: block;
+    border-radius: 50%;
+    background: red;
+    border:none;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.4);
+    color: #FFF;
+    position: absolute;
+    left: auto;
+    right: 15px;
+    top: 4px;
+}
